# katrain-bots

./: .gitignore  README.md  ai2gtp.py  analysis_bot.py  config.json  engine_server.py  gtp2ogs.json5  katago_analysis.cfg  ogs_position.py  pyproject.toml  settings.py  start.py  start_bot.py
