[project]
name = 'katrain-bots'
version = '0'
dependencies = [
	"httpx",
	"sgfmill",
]

[tool.ruff]
line-length = 120
select = [
	'E', 'F', 'I',
	'YTT', 'COM', 'T10', 'ISC', 'G', 'PIE', 'Q', 'RSE',
	'PLC', 'PLE',
	'RUF',
]
[tool.ruff.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'double'
[tool.ruff.isort]
lines-after-imports = 1

[tool.mypy]
ignore_missing_imports = true
